src/qbert_py_laserfollow/log/build_2023-03-22_13-34-36/qbert_py_laserfollow/stdout_stderr.log
running egg_info
writing build/qbert_py_laserfollow/qbert_py_laserfollow.egg-info/PKG-INFO
writing dependency_links to build/qbert_py_laserfollow/qbert_py_laserfollow.egg-info/dependency_links.txt
writing entry points to build/qbert_py_laserfollow/qbert_py_laserfollow.egg-info/entry_points.txt
writing requirements to build/qbert_py_laserfollow/qbert_py_laserfollow.egg-info/requires.txt
writing top-level names to build/qbert_py_laserfollow/qbert_py_laserfollow.egg-info/top_level.txt
reading manifest file 'build/qbert_py_laserfollow/qbert_py_laserfollow.egg-info/SOURCES.txt'
writing manifest file 'build/qbert_py_laserfollow/qbert_py_laserfollow.egg-info/SOURCES.txt'
running build
running build_py
copying qbert_py_laserfollow/laserfollow.py -> /home/johnma/ros2_ws/src/qbert_py_laserfollow/build/qbert_py_laserfollow/build/lib/qbert_py_laserfollow
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/johnma/ros2_ws/src/qbert_py_laserfollow/build/qbert_py_laserfollow/build/lib/qbert_py_laserfollow/laserfollow.py -> /home/johnma/ros2_ws/src/qbert_py_laserfollow/install/qbert_py_laserfollow/lib/python3.10/site-packages/qbert_py_laserfollow
byte-compiling /home/johnma/ros2_ws/src/qbert_py_laserfollow/install/qbert_py_laserfollow/lib/python3.10/site-packages/qbert_py_laserfollow/laserfollow.py to laserfollow.cpython-310.pyc
running install_data
  File "/home/johnma/ros2_ws/src/qbert_py_laserfollow/install/qbert_py_laserfollow/lib/python3.10/site-packages/qbert_py_laserfollow/laserfollow.py", line 43
    print(f"back: {ranges[0]} -- right: {ranges[front//2]} -- front: {ranges[front]} -- left: {ranges[front//.5]} )
          ^
SyntaxError: unterminated string literal (detected at line 43)

running install_egg_info
removing '/home/johnma/ros2_ws/src/qbert_py_laserfollow/install/qbert_py_laserfollow/lib/python3.10/site-packages/qbert_py_laserfollow-0.0.0-py3.10.egg-info' (and everything under it)
Copying build/qbert_py_laserfollow/qbert_py_laserfollow.egg-info to /home/johnma/ros2_ws/src/qbert_py_laserfollow/install/qbert_py_laserfollow/lib/python3.10/site-packages/qbert_py_laserfollow-0.0.0-py3.10.egg-info
running install_scripts
Installing laserfollow script to /home/johnma/ros2_ws/src/qbert_py_laserfollow/install/qbert_py_laserfollow/lib/qbert_py_laserfollow
writing list of installed files to '/home/johnma/ros2_ws/src/qbert_py_laserfollow/build/qbert_py_laserfollow/install.log'
